log/build_2021-06-09_09-09-25/control_pkg/stdout_stderr.log
[35m[1mScanning dependencies of target control_pid_p1_node[0m
[ 50%] [32mBuilding CXX object CMakeFiles/control_pid_p1_node.dir/src/control_pid_p1_node.cpp.o[0m
/home/javierfr/Tesis_ws/V1/src/control_pkg/src/control_pid_p1_node.cpp: In constructor ‘Control_PID_P1_node::Control_PID_P1_node()’:
/home/javierfr/Tesis_ws/V1/src/control_pkg/src/control_pid_p1_node.cpp:26:63: error: no matching function for call to ‘Control_PID_P1_node::create_wall_timer(int, std::_Bind_helper<false, void (Control_PID_P1_node::*)(), Control_PID_P1_node*>::type)’
   26 |     100, std::bind(&Control_PID_P1_node::timer_callback, this));
      |                                                               ^
In file included from /opt/ros/foxy/include/rclcpp/executors/single_threaded_executor.hpp:28,
                 from /opt/ros/foxy/include/rclcpp/executors.hpp:22,
                 from /opt/ros/foxy/include/rclcpp/rclcpp.hpp:146,
                 from /home/javierfr/Tesis_ws/V1/src/control_pkg/src/control_pid_p1_node.cpp:1:
/opt/ros/foxy/include/rclcpp/node.hpp:232:3: note: candidate: ‘template<class DurationRepT, class DurationT, class CallbackT> typename rclcpp::WallTimer<CallbackT>::SharedPtr rclcpp::Node::create_wall_timer(std::chrono::duration<_Rep1, _Period1>, CallbackT, rclcpp::CallbackGroup::SharedPtr)’
  232 |   create_wall_timer(
      |   ^~~~~~~~~~~~~~~~~
/opt/ros/foxy/include/rclcpp/node.hpp:232:3: note:   template argument deduction/substitution failed:
/home/javierfr/Tesis_ws/V1/src/control_pkg/src/control_pid_p1_node.cpp:26:63: note:   mismatched types ‘std::chrono::duration<_Rep1, _Period1>’ and ‘int’
   26 |     100, std::bind(&Control_PID_P1_node::timer_callback, this));
      |                                                               ^
/home/javierfr/Tesis_ws/V1/src/control_pkg/src/control_pid_p1_node.cpp: In member function ‘void Control_PID_P1_node::subs_callback(interfaces::msg::ImgData_<std::allocator<void> >::SharedPtr) const’:
/home/javierfr/Tesis_ws/V1/src/control_pkg/src/control_pid_p1_node.cpp:35:64: warning: unused parameter ‘data_msg’ [-Wunused-parameter]
   35 |   void subs_callback(const interfaces::msg::ImgData::SharedPtr data_msg) const
      |                      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~
make[2]: *** [CMakeFiles/control_pid_p1_node.dir/build.make:63: CMakeFiles/control_pid_p1_node.dir/src/control_pid_p1_node.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:78: CMakeFiles/control_pid_p1_node.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
